--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "prettier --write . && git add -A ."
+      "pre-commit": "lint-staged"
     }
+  },
+  "lint-staged": {
+    "*": "prettier --write"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -44,6 +47,7 @@
   },
   "devDependencies": {
     "concurrently": "^7.0.0",
+    "lint-staged": "^13.1.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.15",
     "prettier": "^2.8.1"
